--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "firebase": "^9.6.10",
     "react": "^17.0.2",
-    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
